--- a/#source/scss/_third.scss
+++ b/#source/scss/_third.scss
@@ -17,7 +17,7 @@
 
 .third {
 	padding: 100px 0 0 0;
-	background: url("../images/system_img/Second_section/BG_3-min.png");
+	background: url("../images/system_img/Second_section/BG_3-min.png") center / cover no-repeat;
 	position: relative;
 	&__wrap {
 		text-align: center;
