--- a/css/style.css
+++ b/css/style.css
@@ -756,7 +756,7 @@ body._lock {
 
 .third {
   padding: 100px 0 0 0;
-  background: url("../images/system_img/Second_section/BG_3-min.png");
+  background: url("../images/system_img/Second_section/BG_3-min.png") center/cover no-repeat;
   position: relative;
 }
 
