--- a/#source/scss/_third.scss
+++ b/#source/scss/_third.scss
@@ -104,6 +104,7 @@
 	border-radius: 25px;
 	display: flex;
 	flex-direction: column;
+	box-shadow: 0px 0px 15px 0px #62626280;
 	&__img {
 		height: 179.7px;
 		border-top-right-radius: 25px;
