--- a/#source/scss/_second.scss
+++ b/#source/scss/_second.scss
@@ -1,17 +1,20 @@
 .second {
 	width: 100%;
-	min-height: 100vh;
 	padding: 100px 0 0 0;
 	background: url("../images/system_img/Second_section/BG_section_2-min.png") center / cover no-repeat;
 	position: relative;
+
+	@media (max-height: 700px) {
+		min-height: 100vh;
+	}
 
 	&__wrap {
 	}
 
 	&__title {
 		font-family: "Woodstick", sans-serif;
-		font-size: 50px;
-		line-height: 60px;
+		font-size: 70px;
+		line-height: 150px;
 		text-align: center;
 		color: #ffeb02;
 
@@ -65,6 +68,7 @@
 		padding: 50px 70px 0 0;
 		display: flex;
 		flex-direction: column;
+		justify-content: center;
 	}
 
 	&__description {
