--- a/#source/scss/_first.scss
+++ b/#source/scss/_first.scss
@@ -4,6 +4,7 @@
 	padding: 100px 0 0 0;
 	background: url("../images/system_img/First_section/BG_section_one.jpg") center / cover no-repeat;
 	position: relative;
+	z-index: 2;
 
 	&__bg-img {
 		position: absolute;
