--- a/#source/scss/_header.scss
+++ b/#source/scss/_header.scss
@@ -6,6 +6,7 @@
 	left: 0;
 	padding: 0 50px;
 	z-index: 50;
+	background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
 
 	&__container {
 		display: flex;
