--- a/#source/scss/_third.scss
+++ b/#source/scss/_third.scss
@@ -17,7 +17,7 @@
 
 .third {
 	padding: 100px 0 0 0;
-	background: url("../images/system_img/Second_section/BG_3-min.png") center / cover no-repeat;
+	background: url("../images/system_img/Second_section/BG_3-min.jpg") center / cover no-repeat;
 	position: relative;
 	&__wrap {
 		text-align: center;
@@ -235,7 +235,7 @@
 
 	&__footer {
 		padding: 50px 0 70px 0;
-		background: url("../images/system_img/Third_section/footer-bg.png") center / cover no-repeat;
+		background: url("../images/system_img/Third_section/footer-bg.jpg") center / cover no-repeat;
 	}
 }
 .info-third {
