--- a/#source/scss/_second.scss
+++ b/#source/scss/_second.scss
@@ -8,6 +8,10 @@
 		min-height: 100vh;
 	}
 
+	@media (max-width: 768px) {
+		padding: 20px 0 0 0;
+	}
+
 	&__wrap {
 	}
 
@@ -21,8 +25,8 @@
 		padding: 0 15px;
 
 		@media (max-width: 768px) {
-			font-size: 35px;
-			line-height: 43px;
+			font-size: 30px;
+			line-height: 36px;
 		}
 	}
 
@@ -58,6 +62,7 @@
 	justify-content: space-between;
 	&__img {
 		flex: 0 1 40%;
+		transform: translateX(-30%);
 		img {
 			max-width: 100%;
 		}
@@ -148,20 +153,24 @@
 		}
 	}
 
-	@media (max-width: 500px) {
+	@media (max-width: 768px) {
 		flex-direction: column;
 
 		&__img {
-			max-width: 40%;
+			max-width: 80%;
+			align-self: center;
+			transform: translateX(0);
 		}
 
 		&__description {
-			align-self: flex-end;
+			align-self: center;
 			margin: 0 0 0 0;
 		}
 
 		&__price {
 			margin: 0px 0 0 0;
+			align-self: center;
+			padding: 13px 50px;
 		}
 
 		&__body {
