--- a/#source/scss/_burger.scss
+++ b/#source/scss/_burger.scss
@@ -22,7 +22,7 @@ $time-animation: 0.4s;
 
 		span {
 			position: absolute;
-			background-color: #fff;
+			background-color: #ffed02;
 			left: 0;
 			width: 100%;
 			height: 2px;
@@ -34,7 +34,7 @@ $time-animation: 0.4s;
 		&:after {
 			content: "";
 			position: absolute;
-			background-color: #fff;
+			background-color: #ffed02;
 			width: 100%;
 			height: 2px;
 			left: 0;
