--- a/#source/scss/_header.scss
+++ b/#source/scss/_header.scss
@@ -8,6 +8,10 @@
 	z-index: 50;
 	background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
 
+	&._active {
+		background: rgba(0, 0, 0, 0.89);
+	}
+
 	&__container {
 		display: flex;
 		justify-content: space-between;
