--- a/#source/scss/_third.scss
+++ b/#source/scss/_third.scss
@@ -219,7 +219,9 @@
 	&__buttons {
 		margin: 30px 0 0 0;
 		.third__link {
-			margin: 0 30px 0 0;
+			&:first-child {
+				margin: 0 70px 0 0;
+			}
 		}
 
 		@media (max-width: 1300px) {
@@ -228,7 +230,18 @@
 			padding: 0 15px;
 
 			.third__link {
-				margin: 0 0 30px 0;
+				&:first-child {
+					margin: 0 0 70px 0;
+				}
+				margin: 0 0 0px 0;
+			}
+		}
+
+		@media (max-width: 768px) {
+			.third__link {
+				&:first-child {
+					margin: 0 0 30px 0;
+				}
 			}
 		}
 	}
