--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -103,8 +103,8 @@ body._lock {
 		top: 10px;
 		right: 10px;
 		cursor: pointer;
-		width: 50px;
-		height: 50px;
+		width: 70px;
+		height: 70px;
 		display: block;
 		z-index: 152;
 	}
@@ -508,5 +508,83 @@ body._lock {
 
 	@media (max-width: 991px) {
 		display: none;
+	}
+}
+
+.delivery {
+	width: 100%;
+	height: 100vh;
+	padding: 100px 0 0 0;
+	background: url("../images/system_img/Third_section/footer-bg.jpg") center / cover no-repeat;
+	overflow-y: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	&__title {
+		font-family: "Woodstick", sans-serif;
+		font-size: 70px;
+		line-height: 84px;
+		/* identical to box height */
+
+		text-align: center;
+
+		color: #ffed02;
+		margin: 0 0 50px 0;
+	}
+
+	&__text {
+		font-family: "Proxima Nova", sans-serif;
+		font-size: 20px;
+		line-height: 24px;
+		text-align: center;
+
+		color: #ffffff;
+		max-width: 790px;
+		margin: 0 0 50px 0;
+	}
+
+	&__ps {
+		font-family: "Woodstick", sans-serif;
+
+		font-size: 30px;
+		line-height: 36px;
+		text-align: center;
+		max-width: 1062px;
+		color: #ffed02;
+	}
+}
+
+@media (max-width: 900px) {
+	.delivery__text {
+		max-width: 500px;
+	}
+
+	.delivery__ps {
+		max-width: 650px;
+	}
+
+	.delivery__title {
+		font-size: 50px;
+		line-height: 65px;
+	}
+}
+
+@media (max-width: 500px) {
+	.delivery__text {
+		max-width: none;
+		padding: 0 15px;
+	}
+
+	.delivery__ps {
+		max-width: none;
+		padding: 0 15px;
+		font-size: 25px;
+		line-height: 35px;
+	}
+
+	.delivery__title {
+		font-size: 35px;
+		line-height: 45px;
 	}
 }
