--- a/#source/scss/_fonts.scss
+++ b/#source/scss/_fonts.scss
@@ -20,7 +20,7 @@
 
 @font-face {
 	font-family: "Woodstick";
-	src: url("./../fonts/Woodstick-Regular.ttf") format("truetype");
+	src: url("./../fonts/Appleberry.ttf") format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
