--- a/#source/scss/_header.scss
+++ b/#source/scss/_header.scss
@@ -31,7 +31,7 @@
 		font-family: "Proxima Nova";
 		font-size: 20px;
 		line-height: 24px;
-
+		text-transform: uppercase;
 		color: #ffffff;
 		margin: 0 30px 0 0;
 		transition: 0.3s;
