--- a/#source/scss/_third.scss
+++ b/#source/scss/_third.scss
@@ -195,6 +195,7 @@
 		width: 169px;
 		height: 44px;
 		background: none;
+		text-transform: uppercase;
 
 		border: 3px solid #ffe802;
 		box-sizing: border-box;
