--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -528,6 +528,7 @@ body._lock {
 		font-size: 70px;
 		line-height: 84px;
 		/* identical to box height */
+		text-transform: uppercase;
 
 		text-align: center;
 
@@ -540,7 +541,6 @@ body._lock {
 		font-size: 20px;
 		line-height: 24px;
 		text-align: center;
-
 		color: #ffffff;
 		max-width: 790px;
 		margin: 0 0 50px 0;
@@ -548,6 +548,7 @@ body._lock {
 
 	&__ps {
 		font-family: "Woodstick", sans-serif;
+		text-transform: uppercase;
 
 		font-size: 30px;
 		line-height: 36px;
