--- a/#source/scss/_third.scss
+++ b/#source/scss/_third.scss
@@ -116,7 +116,7 @@
 		margin: 11px 0 20px 0;
 		padding: 0 15px;
 		text-align: center;
-
+		text-transform: uppercase;
 		font-family: "Woodstick", sans-serif;
 		font-size: 20px;
 		line-height: 24px;
