--- a/css/style.css
+++ b/css/style.css
@@ -937,6 +937,7 @@ body._lock {
   margin: 11px 0 20px 0;
   padding: 0 15px;
   text-align: center;
+  text-transform: uppercase;
   font-family: "Woodstick", sans-serif;
   font-size: 20px;
   line-height: 24px;
