--- a/#source/scss/_third.scss
+++ b/#source/scss/_third.scss
@@ -33,7 +33,7 @@
 		line-height: 60px;
 		text-align: center;
 		color: #fff;
-
+		text-transform: uppercase;
 		padding: 0 15px;
 
 		@media (max-width: 768px) {
