--- a/css/style.css
+++ b/css/style.css
@@ -915,6 +915,8 @@ body._lock {
 .item-third {
   width: 245px;
   padding: 0 0 20px 0;
+  position: relative;
+  z-index: 10;
   background: #19181b;
   border-radius: 25px;
   display: -webkit-box;
