--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -387,6 +387,7 @@ body._lock {
 		font-size: 30px;
 		line-height: 36px;
 		text-align: center;
+		text-transform: uppercase;
 
 		color: #ffffff;
 		display: inline-block;
