--- a/css/style.css
+++ b/css/style.css
@@ -1580,6 +1580,7 @@ body._lock {
   font-size: 30px;
   line-height: 36px;
   text-align: center;
+  text-transform: uppercase;
   color: #ffffff;
   display: inline-block;
   margin: 0 10px 0 0;
