add delivery text

--- a/css/style.css
+++ b/css/style.css
@@ -1751,6 +1751,16 @@ body._lock {
   margin: 0 0 50px 0;
 }
 
+.delivery__subtitle {
+  font-family: "Woodstick", sans-serif;
+  margin-bottom: 35px;
+  font-size: 30px;
+  line-height: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffed02;
+}
+
 .delivery__text {
   font-family: "Proxima Nova", sans-serif;
   font-size: 20px;
